--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "debugpy-attacher",
   "displayName": "DebugPy Attacher",
   "description": "Automatically detect and attach to debugpy processes",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "publisher": "DebugPyAttacher",
   "license": "MIT",
   "icon": "icon.png",
@@ -59,6 +59,14 @@
       {
         "command": "debugpy.insertAttachCodeWithBreakpoint",
         "title": "Debugpy: Insert Attach Code with Breakpoint"
+      },
+      {
+        "command": "debugpy.copyAttachSnippet",
+        "title": "Debugpy: Copy Attach Snippet"
+      },
+      {
+        "command": "debugpy.copyAttachSnippetWithBreakpoint",
+        "title": "Debugpy: Copy Attach Snippet with Breakpoint"
       }
     ],
     "keybindings": [
@@ -72,6 +80,18 @@
         "command": "debugpy.insertAttachCodeWithBreakpoint",
         "key": "ctrl+k shift+b",
         "mac": "cmd+k shift+b",
+        "when": "editorTextFocus && editorLangId == python"
+      },
+      {
+        "command": "debugpy.copyAttachSnippet",
+        "key": "ctrl+k c",
+        "mac": "cmd+k c",
+        "when": "editorTextFocus && editorLangId == python"
+      },
+      {
+        "command": "debugpy.copyAttachSnippetWithBreakpoint",
+        "key": "ctrl+k shift+c",
+        "mac": "cmd+k shift+c",
         "when": "editorTextFocus && editorLangId == python"
       }
     ],
@@ -99,6 +119,11 @@
           "minimum": 1024,
           "maximum": 65535,
           "description": "Default port number used in debugpy attach code snippets"
+        },
+        "debugpyAttacher.defaultHost": {
+          "type": "string",
+          "default": "localhost",
+          "description": "Host address used in debugpy attach code snippets and debugger connections"
         }
       }
     },
